Strings, dimensions and colors moved to corresponding resource files.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="button_match">MATCH</string>
     <string name="button_set">SET</string>
     <string name="button_score">SCORE</string>
+    <string name="playera">Player A</string>
     <string name="playerb">Player B</string>
 </resources>
